--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Mssql": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=LearnGraphQlDB;Integrated Security=SSPI;"
+  }
 }
